--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "react-step-progress-bar": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
