--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bulma": "^0.9.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router": "^6.14.2",
